--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -62,11 +62,11 @@
             android:id="@+id/textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="이메일 : "
+            android:text="직업 : "
             android:textSize="24sp" />
 
         <TextView
-            android:id="@+id/introduce"
+            android:id="@+id/job"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="TextView"
