--- a/app/src/main/res/layout/activity_profile_revise.xml
+++ b/app/src/main/res/layout/activity_profile_revise.xml
@@ -30,11 +30,11 @@
         android:inputType="textPersonName" />
 
     <EditText
-        android:id="@+id/editemail"
+        android:id="@+id/editjob"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="이메일을 입력하세요"
+        android:hint="직업을 입력하세요"
         android:inputType="textEmailAddress" />
 
     <EditText
