파이어 베이스 연동 닉네임 데이터베이스 연동

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -44,6 +44,26 @@
             android:layout_margin="16dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+
+
+        <EditText
+            android:id="@+id/editTextNickname"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="10dp"
+            android:hint="Enter 별명"
+            />
+
+
+        <Button
+            android:id="@+id/buttonNickname"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:layout_gravity="center_horizontal"
+            android:text="입력" />
+
     </LinearLayout>
 </RelativeLayout>
 
