--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,14 +7,25 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
+
     <TextView
         android:layout_gravity="center_horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:textSize="23dp"
+        android:textSize="40dp"
         android:textColor="@color/colorAccent"
-        android:text="회원가입" />
+        android:text="동반자" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="5dp"
+        android:text="회원가입"
+        android:textColor="@color/colorAccent"
+        android:textSize="23dp" />
+
 
     <TextView
         android:layout_gravity="center_horizontal"
@@ -44,17 +55,17 @@
         android:id="@+id/buttonSignup"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_margin="15dp"
         android:layout_gravity="center_horizontal"
+        android:layout_margin="15dp"
         android:text="회원가입" />
 
     <TextView
-        android:text="회원이시면 여기에서 로그인 해주세요."
         android:id="@+id/textViewSignin"
-        android:textAlignment="center"
-        android:layout_margin="15dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        android:text="회원이시면 여기에서 로그인 해주세요."
+        android:textAlignment="center" />
 
     <TextView
         android:layout_gravity="center_horizontal"
