--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,20 +7,40 @@
     tools:context=".MainActivity">
 
 
+    <TextView
+        android:layout_width="159dp"
+        android:layout_height="75dp"
+        android:textColor="#E91E63"
+        android:textSize="55dp"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="126dp"
+        tools:layout_editor_absoluteY="87dp"
+        tools:text="동반자" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/startBtn"
+        android:layout_width="145dp"
+        android:layout_height="83dp"
+        android:layout_gravity="center_vertical"
+        android:background="#FFFFFF"
         android:text="시작"
+        android:textColor="#E91E63"
+        android:textSize="46dp"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="133dp"
+        tools:layout_editor_absoluteY="324dp" />
 
-         />
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="84dp"
+        android:layout_height="71dp"
+        app:srcCompat="@drawable/heart"
+        tools:layout_editor_absoluteX="285dp"
+        tools:layout_editor_absoluteY="87dp"
+        tools:ignore="MissingConstraints" />
 
 
+</androidx.constraintlayout.widget.ConstraintLayout>
 
-
-
-
-</LinearLayout>
 
 
