--- a/app/src/main/res/layout/activity_profile_revise.xml
+++ b/app/src/main/res/layout/activity_profile_revise.xml
@@ -334,7 +334,16 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
-                android:orientation="horizontal" />
+                android:orientation="horizontal" >
+
+                <TextView
+                    android:id="@+id/profile_check"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_weight="1"
+                    android:text="TextView"
+                    android:textColor="#FF0000" />
+            </LinearLayout>
 
         </LinearLayout>
     </ScrollView>
