--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -11,6 +11,7 @@
         android:layout_height="61dp"
         android:gravity="center"
         android:text="나의 프로필"
+        android:textColor="#E91E63"
         android:textSize="30sp" />
 
     <ImageView
@@ -18,7 +19,8 @@
         android:layout_width="165dp"
         android:layout_height="160dp"
         android:layout_gravity="center"
-        app:srcCompat="@drawable/ic_launcher_foreground" />
+        app:srcCompat="@drawable/ic_launcher_foreground"
+        tools:ignore="VectorDrawableCompat" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -334,7 +336,9 @@
             android:layout_height="50dp"
             android:layout_gravity="bottom"
             android:layout_weight="1"
-            android:text="수정하기" />
+            android:background="#FFFFFF"
+            android:text="수정하기"
+            android:textColor="#E91E63" />
     </LinearLayout>
 
 </LinearLayout>
