--- a/app/src/main/res/layout/activity_sub.xml
+++ b/app/src/main/res/layout/activity_sub.xml
@@ -71,6 +71,13 @@
             android:layout_margin="15dp"
             android:layout_gravity="center_horizontal"
             android:text="프로필이동" />
+        <Button
+            android:id="@+id/buttonGoChat"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:layout_gravity="center_horizontal"
+            android:text="채팅이동" />
 
     </LinearLayout>
 </RelativeLayout>
