--- a/app/src/main/res/layout/activity_profile_revise.xml
+++ b/app/src/main/res/layout/activity_profile_revise.xml
@@ -174,7 +174,7 @@
                     android:layout_height="match_parent"
                     android:ems="10"
                     android:hint="키 입력"
-                    android:inputType="textPersonName" />
+                    android:inputType="phone" />
 
             </LinearLayout>
 
@@ -279,7 +279,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:ems="10"
-                    android:inputType="textPersonName"
+                    android:inputType="phone"
                     android:textSize="24sp" />
 
                 <TextView
@@ -296,7 +296,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:ems="10"
-                    android:inputType="textPersonName"
+                    android:inputType="phone"
                     android:textSize="24sp" />
 
                 <TextView
