--- a/app/src/main/res/layout/activity_sub.xml
+++ b/app/src/main/res/layout/activity_sub.xml
@@ -29,6 +29,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
+        <TextView
+            android:id="@+id/show_nickname"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal" />
+
         <Button
             android:id="@+id/buttonLogout"
             android:text="로그아웃"
@@ -46,38 +52,55 @@
             android:layout_height="wrap_content" />
 
 
-        <EditText
-            android:id="@+id/editTextNickname"
-            android:layout_width="250dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_margin="10dp"
-            android:hint="Enter 별명"
-            />
+            android:orientation="horizontal">
 
+            <EditText
+                android:id="@+id/editTextNickname"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_weight="1"
+                android:hint="Enter 별명" />
 
-        <Button
-            android:id="@+id/buttonNickname"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            android:layout_gravity="center_horizontal"
-            android:text="id_list 추가" />
+            <Button
+                android:id="@+id/buttonNickname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="10dp"
+                android:layout_weight="1"
+                android:text="id_list 추가" />
+
+        </LinearLayout>
+
 
         <Button
             android:id="@+id/buttonGoProfile"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp"
             android:layout_gravity="center_horizontal"
+            android:layout_marginTop="10dp"
             android:text="프로필이동" />
+
         <Button
             android:id="@+id/buttonGoChat"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp"
             android:layout_gravity="center_horizontal"
+            android:layout_marginTop="10dp"
             android:text="채팅이동" />
+
+        <Button
+            android:id="@+id/payment"
+            android:layout_width="198dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:text="결제하기" />
 
     </LinearLayout>
 </RelativeLayout>
