유저인포 만듦
유저인포 성별닉네임uid 완성
회원가입 후 바로 액티비티 전환은 미완성

--- a/app/src/main/res/layout/activity_sub.xml
+++ b/app/src/main/res/layout/activity_sub.xml
@@ -100,7 +100,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
-            android:text="결제하기" />
+            android:text="테스트용" />
 
     </LinearLayout>
 </RelativeLayout>
