--- a/app/src/main/res/layout/activity_find.xml
+++ b/app/src/main/res/layout/activity_find.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
 
-    tools:context=".SingUpActivity">
+    tools:context=".MainActivity">
 
     <TextView
         android:layout_gravity="center_horizontal"
