--- a/app/src/main/res/layout/activity_sub.xml
+++ b/app/src/main/res/layout/activity_sub.xml
@@ -54,17 +54,15 @@
             android:layout_gravity="center_horizontal"
             android:text="채팅이동" />
 
-<<<<<<< HEAD
-=======
+
         <Button
             android:id="@+id/payment"
             android:layout_width="198dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
-            android:text="결제하기" />
+            android:text="테스트용" />
 
->>>>>>> parent of 228412f... 유저인포 만듦
     </LinearLayout>
 </RelativeLayout>
 
