--- a/app/src/main/res/layout/activity_chat_singlemessage2.xml
+++ b/app/src/main/res/layout/activity_chat_singlemessage2.xml
@@ -6,16 +6,20 @@
     <LinearLayout
         android:id="@+id/singleMessageContainer"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+
+        >
 
         <TextView
+
             android:id="@+id/singleMessage"
             android:layout_width="wrap_content"
             android:layout_height="41dp"
             android:layout_gravity="center"
             android:layout_margin="5dip"
-            android:background="@drawable/bubble_a"
-            android:paddingLeft="10dip"
+            android:background="@drawable/bubble_b"
+
             android:text="Hello"
 
             android:textColor="@android:color/primary_text_light" />
