채팅 나가기 버튼 ㄷ만듬

--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -32,7 +32,8 @@
                 android:id="@+id/img_sent"
                 android:layout_width="64dp"
                 android:layout_height="wrap_content"
-                android:text="img" />
+                android:text="나가기"
+                />
 
 
             <EditText
